# mrhealth-data-platform

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  WORKFLOW-GUIDE.md  case_the_planner_brainstorm_all_project.md  case_the_planner_brainstorm_postgresql.md  docker-compose-airflow.yml  docker-compose-superset.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  (+3 more)
airflow/: Dockerfile
config/: project_config.yaml  project_config.yaml.example
dags/: mrhealth_backfill_monitor.py  mrhealth_daily_pipeline.py  mrhealth_data_quality.py  mrhealth_data_retention.py  mrhealth_reference_refresh.py
docs/: ACESSO_SISTEMA_COMPLETO.md  AIRFLOW_SETUP.md  ARCHITECTURE.md  CONTINUOUS_DATA_SETUP.md  DATA_CATALOG.md  DIAGRAMS_STYLE_GUIDE.md  INTERVIEW_SCRIPT.md  MR_HEALTH_Data_Platform.html  POSTGRESQL_INTEGRATION.md  RUNBOOKS.md  SETUP_GUIDE.md  SUPERSET_SETUP.md
infra/: README.md
k8s/: deploy-mrhealth-tools.sh  network-policy.yaml  secrets.yaml
scripts/: build_aggregations.py  build_gold_layer.py  build_silver_layer.py  constants.py  deploy_monitoring_tables.py  deploy_phase1_infrastructure.py  generate_fake_sales.py  generate_incremental_sales.py  load_reference_data.py  migrate_server_rename.sh  seed_postgresql.py  setup_gcp_infrastructure.ps1  setup_pg_extractor_iam.sh  setup_pg_scheduler.sh  setup_pg_secrets.py  setup_superset_dashboards.py  setup_superset_dashboards_v2.py  setup_using_python_sdk.py  terraform_import.sh  upload_fake_data_to_gcs.py  verify_infrastructure.py  verify_superset_upgrade.py
superset/: Dockerfile  docker-bootstrap.sh  superset_config.py
tests/: conftest.py
(+97 files in other folders)
